syntax = "proto3";
package kopi.tokenfactory;

import "gogoproto/gogo.proto";

option go_package = "github.com/kopi-money/kopi/x/tokenfactory/types";

message FactoryDenom {
  option (gogoproto.equal) = true;

  string admin = 1 [(gogoproto.moretags) = "yaml:\"admin\""];
  string display_name = 2 [(gogoproto.moretags) = "yaml:\"display_name\""];
  string full_name = 3 [(gogoproto.moretags) = "yaml:\"full_name\""];
  string icon_hash = 4 [(gogoproto.moretags) = "yaml:\"icon_hash\""];

  uint64 exponent = 5;
}
